<resources>
    <string name="app_name">Gallery</string>
    <string name="from">from</string>
    <string name="developercenter">Software Developer Center</string>
    <string name="todo">TODO</string>
    <string name="title_activity_first">Gallery</string>
    <string name="title_no_storage">Greška</string>
    <string name="galerija">Home</string>
    <string name="mapa">Mapa</string>
    <string name="camera">Camera</string>
    <string name="label_cancel" />
    <string name="label_submit" />
    <string name="label_type_your_comment" />
    <string name="label_report" />
    <string name="description" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="capture">Capture</string>
    <string name="slikaj">Slikaj</string>
    <string name="odbaci">Odbaci</string>
    <string name="title_activity_maps">Map</string>
    <string name="uspesnoSacuvano">Slika uspešno dodata u bazu</string>
    <string name="delete">Da li ste sigurni da želite obrisati sliku?</string>
    <string name="potvrda">Potvrda</string>
    <string name="yes">Da</string>
    <string name="no">Ne</string>
    <string name="successDeleted">Slika uspešno obrisana!</string>
</resources>
